[FIX] sap.m.IconTaBar: scroll arrows in Text-only mode are aligned with the text now
BCP: 1670015003

--- a/src/themelib_sap_belize/src/sap/m/themes/sap_belize/IconTabBar.less
+++ b/src/themelib_sap_belize/src/sap/m/themes/sap_belize/IconTabBar.less
@@ -575,12 +575,19 @@ html[data-sap-ui-os=win8] .sapMITBArrowScroll {
 
 .sapMITBArrowScrollLeftTextOnly {
 	left: 0.25rem;
-	padding: 1rem 0.4rem;
+	padding: 1.1rem 0.4rem;
 }
 
 .sapMITBArrowScrollRightTextOnly {
-	padding: 1rem 0.4rem;
+	padding: 1.1rem 0.4rem;
 	right: 0.25rem;
+}
+
+.sapMITBStretch {
+	.sapMITBArrowScrollLeftTextOnly,
+	.sapMITBArrowScrollRightTextOnly {
+		padding: 2.1rem 0.4rem
+	}
 }
 
 .sap-phone .sapMITBArrowScrollLeft {
@@ -595,12 +602,27 @@ html[data-sap-ui-os=win8] .sapMITBArrowScroll {
 
 .sap-phone .sapMITBArrowScrollLeftTextOnly {
 	left: 0.25rem;
-	padding: 1.25rem 0 0.75rem;
+	padding: 1.1rem 0 0.75rem;
 }
 
 .sap-phone .sapMITBArrowScrollRightTextOnly {
-	padding: 1.25rem 0 0.75rem;
+	padding: 1.1rem 0 0.75rem;
 	right: 0.25rem;
+}
+
+.sap-phone .sapMITB.sapMITBStretch {
+	.sapMITBArrowScrollLeftTextOnly,
+	.sapMITBArrowScrollRightTextOnly {
+		padding: 1.1rem 0 0.75rem
+	}
+}
+
+.sap-tablet,
+html[data-sap-ui-os=win8] {
+	.sapMITBArrowScrollLeftTextOnly,
+	.sapMITBArrowScrollRightTextOnly {
+		padding: 1.3rem 0.4rem
+	}
 }
 
 .sapMITBNotScrollable > .sapMITBArrowScroll {
@@ -652,12 +674,27 @@ html[data-sap-ui-os=win8] .sapMITBArrowScroll {
 
 		.sapMITBArrowScrollLeftTextOnly {
 			left: 0.25rem;
-			padding: 1.25rem 0 0.75rem;
+			padding: 1.1rem 0 0.75rem;
 		}
 
 		.sapMITBArrowScrollRightTextOnly {
-			padding: 1.25rem 0 0.75rem;
+			padding: 1.1rem 0 0.75rem;
 			right: 0.25rem;
+		}
+	}
+
+	.sap-tablet .sapMITB.sapMITBStretch,
+	html[data-sap-ui-os=win8] .sapMITB.sapMITBStretch {
+		.sapMITBArrowScrollLeftTextOnly,
+		.sapMITBArrowScrollRightTextOnly {
+			padding: 1.25rem 0 0.75rem
+		}
+	}
+
+	.sapMITB.sapMITBStretch {
+		.sapMITBArrowScrollLeftTextOnly,
+		.sapMITBArrowScrollRightTextOnly {
+			padding: 2.1rem 0 0.75rem;
 		}
 	}
 
